# reaction-diffusion-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chatgpt-reaction-diffusion.md
sources/: alignment_allocator.h  reaction_diffusion.cpp
